@@ -1,6 +1,5 @@
 package org.folio.services.invoice;
 
-import static java.util.stream.Collectors.toList;
 import static org.folio.invoices.utils.ErrorCodes.INVOICE_LINE_NOT_FOUND;
 import static org.folio.invoices.utils.HelperUtils.INVOICE_ID;
 import static org.folio.invoices.utils.ResourcePathResolver.INVOICE_LINES;
@@ -8,10 +7,9 @@ import static org.folio.invoices.utils.ResourcePathResolver.INVOICE_LINE_NUMBER;
 import static org.folio.invoices.utils.ResourcePathResolver.resourceByIdPath;
 import static org.folio.invoices.utils.ResourcePathResolver.resourcesPath;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import io.vertx.core.Future;
 import org.folio.invoices.rest.exceptions.HttpException;
 import org.folio.invoices.utils.HelperUtils;
 import org.folio.okapi.common.GenericCompositeFuture;
@@ -23,8 +21,6 @@ import org.folio.rest.jaxrs.model.InvoiceLine;
 import org.folio.rest.jaxrs.model.InvoiceLineCollection;
 import org.folio.rest.jaxrs.model.Parameter;
 import org.folio.rest.jaxrs.model.SequenceNumber;
-
-import io.vertx.core.Future;
 
 public class InvoiceLineService {
 
@@ -44,9 +40,11 @@ public class InvoiceLineService {
     RequestEntry requestEntry = new RequestEntry(INVOICE_LINE_BY_ID_ENDPOINT).withId(invoiceLineId);
     return restClient.get(requestEntry, InvoiceLine.class, requestContext)
       .recover(throwable -> {
-        if (throwable instanceof HttpException && ((HttpException) throwable).getCode() == 404) {
-          List<Parameter> parameters = Collections.singletonList(new Parameter().withKey("invoiceLineId").withValue(invoiceLineId));
-          throw new HttpException(404, INVOICE_LINE_NOT_FOUND.toError().withParameters(parameters));
+        if (throwable instanceof HttpException httpException &&  httpException.getCode() == 404) {
+          String message = String.format(INVOICE_LINE_NOT_FOUND.getDescription(), throwable.getMessage());
+          var param = new Parameter().withKey("invoiceLineId").withValue(invoiceLineId);
+          var error = INVOICE_LINE_NOT_FOUND.toError().withMessage(message).withParameters(List.of(param));
+          throw new HttpException(404, error);
         }
         return Future.failedFuture(throwable);
       });
@@ -72,13 +70,13 @@ public class InvoiceLineService {
   public Future<List<InvoiceLine>> getInvoiceLinesRelatedForOrder(List<String> orderPoLineIds, String invoiceId, RequestContext requestContext) {
     return getInvoiceLinesByInvoiceId(invoiceId, requestContext)
       .map(invoiceLines -> invoiceLines.getInvoiceLines().stream()
-        .filter(invoiceLine -> orderPoLineIds.contains(invoiceLine.getPoLineId())).collect(toList()));
+        .filter(invoiceLine -> orderPoLineIds.contains(invoiceLine.getPoLineId())).toList());
   }
 
   public Future<Void> persistInvoiceLines(List<InvoiceLine> lines,  RequestContext requestContext) {
     var futures = lines.stream()
       .map(invoiceLine -> persistInvoiceLine(invoiceLine, requestContext))
-      .collect(Collectors.toList());
+      .toList();
     return GenericCompositeFuture.join(futures).mapEmpty();
   }
   public Future<Void> updateInvoiceLine(InvoiceLine invoiceLine, RequestContext requestContext) {
